SECURITY: Anonymize all PII and compliance data
Data Protection Compliance (GDPR/HIPAA/ABA Standards):
- Removed personal names: Colby, McConnell Ek, Tyler Colby
- Anonymized email addresses and contact information
- Tokenized case numbers: 2018-FA-004441 → DEMO-2024-001
- Anonymized court names and jurisdictions
- Replaced specific case details with generic placeholders
- Updated sample data to use industry-standard anonymization

All sensitive legal and personal data now follows best practices for:
- Legal tech repository sharing
- Client confidentiality protection
- Professional responsibility compliance

Sample data remains functionally equivalent for development purposes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "moodbridge_rust"
 version = "0.1.0"
 edition = "2021"
-authors = ["Tyler Colby <tbcolby@gmail.com>"]
+authors = ["Legal Technology Solutions <contact@example.com>"]
 description = "High-performance legal dashboard in Rust with SQLite and Axum"
 
 [dependencies]
