--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,22 @@ thiserror = "1.0"
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tower-http = { version = "0.4", features = ["cors"] }
-reqwest = { version = "0.11", features = ["json"] }
+tower-http = { version = "0.4", features = ["cors", "fs"] }
+reqwest = { version = "0.11", features = ["json", "multipart"] }
 futures = "0.3"
 async-trait = "0.1"
+uuid = { version = "1.0", features = ["v4", "serde"] }
+tokio-util = { version = "0.7", features = ["io"] }
+multipart = "0.18"
+sha2 = "0.10"
+hex = "0.4"
+mime_guess = "2.0"
+base64 = "0.21"
+# WARP COMMAND system dependencies
+lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls", "pool"] }
+cron = "0.12"
+regex = "1.10"
+clap = { version = "4.0", features = ["derive"] }
+tokio-cron-scheduler = "0.9"
+log = "0.4"
+env_logger = "0.10"
