feat: comprehensive update with DevOps dashboard and code improvements
- Add beautiful DevOps dashboard with real-time project monitoring
- Fix Rust compilation issues and code formatting
- Update Cargo.toml dependencies and configuration
- Enhance AI modules with better error handling
- Improve database connection and error management
- Add new diff viewer template for git change visualization
- Generate latest DevOps reports and analysis
- Resolve import conflicts and dependency issues

Features:
- Modern glassmorphism DevOps dashboard with project status
- Cross-repository monitoring with visual indicators
- Interactive DevOps actions panel
- Real-time metrics display (uncommitted files, TODOs, projects)
- Responsive design with hover animations
- Auto-refresh functionality

Technical improvements:
- Fixed Environment naming conflicts in config.rs
- Resolved axum Server import issues for v0.7
- Updated tower-http features and layer composition
- Fixed borrowing issues in error handling
- Added development warning allowances
- Enhanced cross-project compatibility

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ readme = "README.md"
 
 [dependencies]
 # Web Framework & HTTP
-axum = { version = "0.7", features = ["headers", "multipart", "ws"] }
+axum = { version = "0.7", features = ["multipart", "ws"] }
 tower = { version = "0.4", features = ["util", "timeout", "limit"] }
-tower-http = { version = "0.5", features = ["cors", "compression", "auth", "trace", "fs", "add-extension", "set-header"] }
+tower-http = { version = "0.5", features = ["cors", "trace", "fs", "add-extension", "set-header", "limit", "timeout"] }
 hyper = { version = "1.0", features = ["full"] }
 
 # Database & Persistence
@@ -66,7 +66,7 @@ metrics = "0.23"
 metrics-prometheus = "0.7"
 
 # Rate Limiting & Security
-tower-governor = "0.3"
+tower_governor = "0.3"
 headers = "0.3"
 
 # Testing (dev dependencies)
@@ -78,6 +78,3 @@ proptest = "1.0"
 insta = "1.0"
 criterion = { version = "0.5", features = ["html_reports"] }
 
-[[bench]]
-name = "benchmarks"
-harness = false
