--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ keywords = ["legal", "analytics", "compliance", "dashboard", "ai"]
 categories = ["web-programming", "database"]
 readme = "README.md"
 
+[lib]
+name = "moodbridge_rust"
+path = "src/lib.rs"
+
 [dependencies]
 # Web Framework & HTTP
 axum = { version = "0.7", features = ["multipart", "ws"] }
@@ -44,6 +48,7 @@ aes-gcm = "0.10"
 # Validation & Input Sanitization
 validator = { version = "0.18", features = ["derive"] }
 ammonia = "4.0"
+regex = "1.0"
 
 # Error Handling & Logging
 thiserror = "1.0"
@@ -72,7 +77,9 @@ headers = "0.3"
 # Testing (dev dependencies)
 [dev-dependencies]
 tokio-test = "0.4"
-httpmock = "0.6"
+serde_json = "1.0"
+tempfile = "3.0"
+futures = "0.3"
 fake = { version = "2.8", features = ["chrono", "uuid"] }
 proptest = "1.0"
 insta = "1.0"
