--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,5 +39,7 @@ clap = { version = "4.0", features = ["derive"] }
 tokio-cron-scheduler = "0.9"
 log = "0.4"
 env_logger = "0.10"
+rand = "0.8"
+urlencoding = "2.1"
 # Wizard dependencies (already covered by existing dependencies)
 # uuid, chrono, serde, serde_json, async-trait, anyhow are already included
